Change git submodule path from ssh to https so it actually works

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lemmagen/lib"]
 	path = lemmagen/lib
-	url = git@github.com:izacus/SlovenianLemmatizer.git
+	url = https://github.com/izacus/SlovenianLemmatizer.git
