--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
--language: python
--dist: bionic
--python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "3.7"
+language: python
+dist: bionic
+python:
+ - "2.7"
+ - "3.4"
+ - "3.5"
+ - "3.6"
+ - "3.7"
 
--before_install:
-  -sudo apt-get update -qq
-  -sudo apt-get install -y build-essential python-dev python3-dev
+before_install:
+ - sudo apt-get update -qq
+ - sudo apt-get install -y build-essential python-dev python3-dev
 
--install:
-  -pip install cython
+install:
+  - pip install cython
 
--script: python setup.py test
+script: python setup.py test
