--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,17 +12,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        sudo apt-get install -y build-essential python-dev python3-dev
         pip install cython
-        apt-get install -y build-essential python-dev python3-dev
     - name: Test
       run: |
         python setup.py test
